Rename common apps to simple apps

--- a/appsets/01-common-apps.yml
+++ b/appsets/01-common-apps.yml
@@ -13,7 +13,7 @@ spec:
             repoURL: https://github.com/kostis-codefresh/multi-app-multi-value-argocd.git
             revision: HEAD
             directories:
-            - path: common-apps/*
+            - path: simple-apps/*
         - clusters:    
             selector:
               matchLabels:
